[gd_scene load_steps=5 format=3 uid="uid://bboe8oflrhla1"]

[ext_resource type="Texture2D" uid="uid://bvj5u025oxsdm" path="res://assets/images/gameover.png" id="1_0swnj"]
[ext_resource type="Script" path="res://scripts/game_over.gd" id="1_rnep5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_i3vhi"]
atlas = ExtResource("1_0swnj")
region = Rect2(0, 9, 58, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ma2w"]
atlas = ExtResource("1_0swnj")
region = Rect2(0, 0, 58, 9)

[node name="GameOver" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(4, 4)
script = ExtResource("1_rnep5")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 2
color = Color(0.425571, 0.425571, 0.425571, 0.392157)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 1

[node name="Reset" type="TextureButton" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture_normal = SubResource("AtlasTexture_i3vhi")

[node name="Exit" type="TextureButton" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture_normal = SubResource("AtlasTexture_4ma2w")

[node name="AppearTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="button_up" from="CenterContainer/VBoxContainer/HBoxContainer/Reset" to="." method="_on_reset_button_up"]
[connection signal="button_up" from="CenterContainer/VBoxContainer/HBoxContainer/Exit" to="." method="_on_exit_button_up"]
[connection signal="timeout" from="AppearTimer" to="." method="_on_appear_timer_timeout"]
